syntax = "proto3";

package grpc;

option go_package = "github.com/fxivan/go-grpc/proto"; //el mismo que go mod

message Item{
    enum ItemPriority{
        LOW = 0;
        MEDIUM = 1;
        HIGH = 2;
    }

    enum ItemStatus{
        INACTIVE = 0;
        ACTIVE = 1;
    }

    string id = 1;
    string WishListId = 2;
    string name = 3;
    string link = 4;
    double price = 5;
    ItemPriority priority = 6;
    ItemStatus status = 7;
}

message Wishlist{
    enum WishListStatus{
        ACTIVE = 0;
        INACTIVE = 1;
    }

    string id = 1;
    string name = 2;
    WishListStatus status = 3;
}

message CreateWishListReq{
    Wishlist wish_list = 1;
}

message CreateWishListRes{
    string wishListId = 1;
}

message AddItemReq{
    Item item = 1;
}

message AddItemResp{}

message ListWishListReq{
    string wishListId = 1;
}

message ListWishListResp{
    repeated Item items = 1;
}

service WishListService{
    rpc Create(CreateWishListReq) returns (CreateWishListRes);
    rpc Add(AddItemReq) returns (AddItemResp);
    rpc List(ListWishListReq) returns (ListWishListResp);
}